# linecook

./: .clang-format  .gitignore  CMakeLists.txt  GNUmakefile  README.md
.copr/: Makefile
LICENSE.md/: LICENSE
deb/: Makefile  changelog  control  copyright  rules
doc/: readme.md
include/linecook/: console_vt.h  glob_cvt.h  kewb_utf.h  keycook.h  linecook.h  ttycook.h  xwcwidth9.h
rpm/: linecook.spec
src/: complete.cpp  console_vt.cpp  dispatch.cpp  hashaction.c  history.cpp  kewb_utf.cpp  keycook.cpp  keytable.c  linecook.cpp  lineio.cpp  linesave.cpp  prompt.cpp  ttycook.cpp  xwcwidth9.cpp
test/: console_test.cpp  example.c  hist_cat.c  net_test.cpp  print_keys.c  simple.c
