cmake_minimum_required (VERSION 3.9.0)
if (POLICY CMP0111)
cmake_policy(SET CMP0111 OLD)
endif ()
project (linecook)
include_directories (
include
)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_definitions(/DPCRE2_STATIC)
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c11 /wd5105)
else ()
add_compile_options (/arch:AVX2 /std:c11 /wd5105)
endif ()
if (NOT TARGET pcre2-32-static)
add_library (pcre2-32-static STATIC IMPORTED)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-32-staticd.lib)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-32-static.lib)
include_directories (../pcre2/build)
else ()
include_directories (${CMAKE_BINARY_DIR}/pcre2)
endif ()
else ()
add_compile_options (-Wall -Wextra -Werror -O2 -flto=auto -ffat-lto-objects -fexceptions -g -grecord-gcc-switches -pipe -Wall -Werror=format-security -Wp,-D_FORTIFY_SOURCE=2 -Wp,-D_GLIBCXX_ASSERTIONS -specs=/usr/lib/rpm/redhat/redhat-hardened-cc1 -fstack-protector-strong -specs=/usr/lib/rpm/redhat/redhat-annobin-cc1  -m64  -mtune=generic -fasynchronous-unwind-tables -fstack-clash-protection -fcf-protection -ggdb -O3 -fno-omit-frame-pointer)
if (TARGET pcre2-32-static)
include_directories (${CMAKE_BINARY_DIR}/pcre2)
endif ()
endif ()
add_library (linecook STATIC src/linecook.cpp src/dispatch.cpp src/history.cpp src/complete.cpp src/prompt.cpp src/linesave.cpp src/keycook.cpp src/lineio.cpp src/ttycook.cpp src/kewb_utf.cpp src/xwcwidth9.cpp src/console_vt.cpp src/keytable.c src/hashaction.c)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
set (ws_lib ws2_32)
endif ()
if (TARGET pcre2-32-static)
link_libraries (linecook pcre2-32-static ${ws_lib})
else ()
link_libraries (linecook -lpcre2-32)
endif ()
if (NOT CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_executable (lc_example test/example.c)
else ()
add_executable (console_test test/console_test.cpp)
add_executable (net_test test/net_test.cpp)
target_link_libraries (net_test ws2_32)
endif ()
add_executable (simple test/simple.c)
add_executable (lc_hist_cat test/hist_cat.c)
add_executable (print_keys test/print_keys.c src/keytable.c)
